🎨 Reformat tutorials codestyle with black

--- a/tutorials/2.2_SOO_1D_scalars.ipynb
+++ b/tutorials/2.2_SOO_1D_scalars.ipynb
@@ -28,11 +28,11 @@
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
     "graph_manager = PlotManager()\n",
-    "true_temp_field = pickle_manager.read_file('results/temp_line_field.pickle')\n",
-    "grid = pickle_manager.read_file('results/temp_line_points.pickle')\n",
+    "true_temp_field = pickle_manager.read_file(\"results/temp_line_field.pickle\")\n",
+    "grid = pickle_manager.read_file(\"results/temp_line_points.pickle\")\n",
     "\n",
     "field_bounds = true_temp_field.get_bounds()\n",
-    "sensor_bounds = field_bounds+np.array([[1], [-1]])*0.002"
+    "sensor_bounds = field_bounds + np.array([[1], [-1]]) * 0.002"
    ]
   },
   {
@@ -59,10 +59,10 @@
     "symmetry_manager.set_1D_x(0.01)\n",
     "\n",
     "# Setup the sensor suite\n",
-    "temps = pickle_manager.read_file('../sensors/k-type-T.pickle')\n",
-    "voltages = pickle_manager.read_file('../sensors/k-type-V.pickle')\n",
+    "temps = pickle_manager.read_file(\"../sensors/k-type-T.pickle\")\n",
+    "voltages = pickle_manager.read_file(\"../sensors/k-type-V.pickle\")\n",
     "sensor = Thermocouple(temps, voltages, 1)\n",
-    "sensors = np.array([sensor]*5)\n",
+    "sensors = np.array([sensor] * 5)\n",
     "\n",
     "# def f(x): return np.zeros(x.shape)\n",
     "# sensor = PointSensor(0, f, 0.1, np.array([[-5e10], [5e10]]), 1)\n",
@@ -72,10 +72,7 @@
     "# sensor_1 = MultiSensor(0, f, 0.1, np.array([[-5000], [5000]]), np.linspace(sensor_bounds[0, 0], sensor_bounds[1, 0], 10).reshape(-1, 1))\n",
     "# sensors = np.array([sensor_1, sensor, sensor, sensor])\n",
     "\n",
-    "sensor_suite = SensorSuite(\n",
-    "    ScalarField(CSModel, field_bounds), \n",
-    "    sensors\n",
-    ")"
+    "sensor_suite = SensorSuite(ScalarField(CSModel, field_bounds), sensors)"
    ]
   },
   {
@@ -117,18 +114,16 @@
     "from cyclops.optimisers import PSOOptimiser\n",
     "\n",
     "\n",
-    "optimiser = PSOOptimiser('00:00:10')\n",
-    "experiment = Experiment(\n",
-    "    true_temp_field,\n",
-    "    grid,\n",
-    "    optimiser\n",
-    ")\n",
-    "experiment.plan_soo(\n",
-    "    sensor_suite,\n",
-    "    sensor_bounds\n",
-    ")\n",
+    "optimiser = PSOOptimiser(\"00:00:10\")\n",
+    "experiment = Experiment(true_temp_field, grid, optimiser)\n",
+    "experiment.plan_soo(sensor_suite, sensor_bounds)\n",
     "res = experiment.design()\n",
-    "proposed_layout, true_temps, model_temps, sensor_values = experiment.get_SOO_plotting_arrays(res.X)"
+    "(\n",
+    "    proposed_layout,\n",
+    "    true_temps,\n",
+    "    model_temps,\n",
+    "    sensor_values,\n",
+    ") = experiment.get_SOO_plotting_arrays(res.X)"
    ]
   },
   {
@@ -166,16 +161,10 @@
    ],
    "source": [
     "# Display the results\n",
-    "graph_manager.build_optimisation(\n",
-    "    res.history\n",
-    ")\n",
+    "graph_manager.build_optimisation(res.history)\n",
     "graph_manager.draw()\n",
     "graph_manager.build_1D_compare(\n",
-    "    grid,\n",
-    "    proposed_layout,\n",
-    "    sensor_values,\n",
-    "    true_temps,\n",
-    "    model_temps\n",
+    "    grid, proposed_layout, sensor_values, true_temps, model_temps\n",
     ")\n",
     "graph_manager.draw()"
    ]
