--- a/tutorials/2.3_SOO_2D_vectors.ipynb
+++ b/tutorials/2.3_SOO_2D_vectors.ipynb
@@ -28,11 +28,11 @@
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
     "graph_manager = PlotManager()\n",
-    "true_temp_field = pickle_manager.read_file('results/disp_plane_field.pickle')\n",
-    "grid = pickle_manager.read_file('results/disp_plane_points.pickle')\n",
+    "true_temp_field = pickle_manager.read_file(\"results/disp_plane_field.pickle\")\n",
+    "grid = pickle_manager.read_file(\"results/disp_plane_points.pickle\")\n",
     "\n",
     "field_bounds = true_temp_field.get_bounds()\n",
-    "sensor_bounds = field_bounds+np.array([[1, 1], [-1, -1]])*0.002"
+    "sensor_bounds = field_bounds + np.array([[1, 1], [-1, -1]]) * 0.002"
    ]
   },
   {
@@ -57,15 +57,19 @@
     "symmetry_manager = SymmetryManager()\n",
     "symmetry_manager.set_2D_x(np.mean(field_bounds[:, 0]))\n",
     "\n",
+    "\n",
     "# Setup the sensor suite\n",
-    "def f(x): return np.zeros(x.shape)\n",
+    "def f(x):\n",
+    "    return np.zeros(x.shape)\n",
+    "\n",
+    "\n",
     "sensor = PointSensor(0, f, 0, np.array([[-5e10, -5e10, -5e10], [5e10, 5e10, 5e10]]), 2)\n",
-    "sensors = np.array([sensor]*5)\n",
+    "sensors = np.array([sensor] * 5)\n",
     "\n",
     "sensor_suite = SensorSuite(\n",
-    "    VectorField(RBFModel, field_bounds), \n",
+    "    VectorField(RBFModel, field_bounds),\n",
     "    sensors,\n",
-    "    symmetry=[symmetry_manager.reflect_2D_horiz]\n",
+    "    symmetry=[symmetry_manager.reflect_2D_horiz],\n",
     ")"
    ]
   },
@@ -100,7 +104,7 @@
     "from cyclops.optimisers import PSOOptimiser\n",
     "\n",
     "# Setup the experiment\n",
-    "optimiser = PSOOptimiser('00:00:10')\n",
+    "optimiser = PSOOptimiser(\"00:00:10\")\n",
     "experiment = Experiment(\n",
     "    true_temp_field,\n",
     "    grid,\n",
@@ -111,7 +115,12 @@
     "    sensor_bounds,\n",
     ")\n",
     "res = experiment.design()\n",
-    "proposed_layout, true_disps, model_disps, sensor_vals = experiment.get_SOO_plotting_arrays(res.X)"
+    "(\n",
+    "    proposed_layout,\n",
+    "    true_disps,\n",
+    "    model_disps,\n",
+    "    sensor_vals,\n",
+    ") = experiment.get_SOO_plotting_arrays(res.X)"
    ]
   },
   {
@@ -163,22 +172,11 @@
     "mag_sensor_vals = np.linalg.norm(sensor_vals, axis=1).reshape(-1, 1)\n",
     "\n",
     "# Display the results\n",
-    "graph_manager.build_optimisation(\n",
-    "    res.history\n",
-    ")\n",
+    "graph_manager.build_optimisation(res.history)\n",
     "graph_manager.draw()\n",
-    "graph_manager.build_2D_compare(\n",
-    "    grid,\n",
-    "    proposed_layout,\n",
-    "    mag_true_disps,\n",
-    "    mag_model_disps\n",
-    ")\n",
+    "graph_manager.build_2D_compare(grid, proposed_layout, mag_true_disps, mag_model_disps)\n",
     "graph_manager.draw()\n",
-    "graph_manager.build_3D_compare(\n",
-    "    grid,\n",
-    "    mag_true_disps,\n",
-    "    mag_model_disps\n",
-    ")\n",
+    "graph_manager.build_3D_compare(grid, mag_true_disps, mag_model_disps)\n",
     "graph_manager.draw()"
    ]
   }
