--- a/tutorials/2.4_SOO_1D_vectors.ipynb
+++ b/tutorials/2.4_SOO_1D_vectors.ipynb
@@ -21,11 +21,11 @@
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
     "graph_manager = PlotManager()\n",
-    "true_temp_field = pickle_manager.read_file('results/disp_line_field.pickle')\n",
-    "grid = pickle_manager.read_file('results/disp_line_points.pickle')\n",
+    "true_temp_field = pickle_manager.read_file(\"results/disp_line_field.pickle\")\n",
+    "grid = pickle_manager.read_file(\"results/disp_line_points.pickle\")\n",
     "\n",
     "field_bounds = true_temp_field.get_bounds()\n",
-    "sensor_bounds = field_bounds+np.array([[1], [-1]])*0.002"
+    "sensor_bounds = field_bounds + np.array([[1], [-1]]) * 0.002"
    ]
   },
   {
@@ -39,14 +39,15 @@
     "from cyclops.sensor_suite import SensorSuite\n",
     "from cyclops.sensors import PointSensor\n",
     "\n",
+    "\n",
     "# Setup the sensor suite\n",
-    "def f(x): return 0\n",
+    "def f(x):\n",
+    "    return 0\n",
+    "\n",
+    "\n",
     "sensor = PointSensor(0, f, 0, np.array([[-5e10, -5e10, -5e10], [5e10, 5e10, 5e10]]), 1)\n",
-    "sensors = np.array([sensor]*5)\n",
-    "sensor_suite = SensorSuite(\n",
-    "    VectorField(RBFModel, field_bounds), \n",
-    "    sensors\n",
-    ")"
+    "sensors = np.array([sensor] * 5)\n",
+    "sensor_suite = SensorSuite(VectorField(RBFModel, field_bounds), sensors)"
    ]
   },
   {
@@ -86,18 +87,19 @@
     "from cyclops.optimisers import PSOOptimiser\n",
     "\n",
     "# Setup the experiment\n",
-    "optimiser = PSOOptimiser('00:00:10')\n",
-    "experiment = Experiment(\n",
-    "    true_temp_field,\n",
-    "    grid,\n",
-    "    optimiser\n",
-    ")\n",
+    "optimiser = PSOOptimiser(\"00:00:10\")\n",
+    "experiment = Experiment(true_temp_field, grid, optimiser)\n",
     "experiment.plan_soo(\n",
     "    sensor_suite,\n",
     "    sensor_bounds,\n",
     ")\n",
     "res = experiment.design()\n",
-    "proposed_layout, true_disps, model_disps, sensor_vals = experiment.get_SOO_plotting_arrays(res.X)"
+    "(\n",
+    "    proposed_layout,\n",
+    "    true_disps,\n",
+    "    model_disps,\n",
+    "    sensor_vals,\n",
+    ") = experiment.get_SOO_plotting_arrays(res.X)"
    ]
   },
   {
@@ -135,11 +137,7 @@
     "graph_manager.build_optimisation(res.history)\n",
     "graph_manager.draw()\n",
     "graph_manager.build_1D_compare(\n",
-    "    grid,\n",
-    "    proposed_layout,\n",
-    "    mag_sensor_vals,\n",
-    "    mag_true_disps,\n",
-    "    mag_model_disps\n",
+    "    grid, proposed_layout, mag_sensor_vals, mag_true_disps, mag_model_disps\n",
     ")"
    ]
   }
