--- a/tutorials/3.4_MOO_1D_vectors.ipynb
+++ b/tutorials/3.4_MOO_1D_vectors.ipynb
@@ -20,11 +20,11 @@
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
     "graph_manager = PlotManager()\n",
-    "true_temp_field = pickle_manager.read_file('results/disp_line_field.pickle')\n",
-    "grid = pickle_manager.read_file('results/disp_line_points.pickle')\n",
+    "true_temp_field = pickle_manager.read_file(\"results/disp_line_field.pickle\")\n",
+    "grid = pickle_manager.read_file(\"results/disp_line_points.pickle\")\n",
     "\n",
     "field_bounds = true_temp_field.get_bounds()\n",
-    "sensor_bounds = field_bounds+np.array([[1], [-1]])*0.002"
+    "sensor_bounds = field_bounds + np.array([[1], [-1]]) * 0.002"
    ]
   },
   {
@@ -38,15 +38,18 @@
     "from cyclops.sensor_suite import SensorSuite\n",
     "from cyclops.sensors import RoundSensor\n",
     "\n",
-    "# Setup the sensor suite\n",
-    "def f(x): return np.zeros(x.shape)\n",
-    "sensor = RoundSensor(0, f, 0.1, np.array([[-5e10, -5e10, -5e10], [5e10, 5e10, 5e10]]), 0.001, 1)\n",
-    "sensors = np.array([sensor]*5)\n",
     "\n",
-    "sensor_suite = SensorSuite(\n",
-    "    VectorField(RBFModel, field_bounds), \n",
-    "    sensors\n",
-    ")"
+    "# Setup the sensor suite\n",
+    "def f(x):\n",
+    "    return np.zeros(x.shape)\n",
+    "\n",
+    "\n",
+    "sensor = RoundSensor(\n",
+    "    0, f, 0.1, np.array([[-5e10, -5e10, -5e10], [5e10, 5e10, 5e10]]), 0.001, 1\n",
+    ")\n",
+    "sensors = np.array([sensor] * 5)\n",
+    "\n",
+    "sensor_suite = SensorSuite(VectorField(RBFModel, field_bounds), sensors)"
    ]
   },
   {
@@ -98,23 +101,16 @@
     "from cyclops.optimisers import NSGA2Optimiser\n",
     "\n",
     "\n",
-    "optimiser = NSGA2Optimiser('00:00:10')\n",
-    "experiment = Experiment(\n",
-    "    true_temp_field,\n",
-    "    grid,\n",
-    "    optimiser\n",
-    ")\n",
-    "experiment.plan_moo(\n",
-    "    sensor_suite,\n",
-    "    sensor_bounds,\n",
-    "    repetitions=10,\n",
-    "    loss_limit=100\n",
-    ")\n",
+    "optimiser = NSGA2Optimiser(\"00:00:10\")\n",
+    "experiment = Experiment(true_temp_field, grid, optimiser)\n",
+    "experiment.plan_moo(sensor_suite, sensor_bounds, repetitions=10, loss_limit=100)\n",
     "res = experiment.design()\n",
     "\n",
     "# Display and save the results\n",
     "for i, setup in enumerate(res.X):\n",
-    "    pickle_manager.save_file(f\"results/temp_1D_{str(i)}.pickle\", setup.reshape(-1, true_temp_field.get_dim()))"
+    "    pickle_manager.save_file(\n",
+    "        f\"results/temp_1D_{str(i)}.pickle\", setup.reshape(-1, true_temp_field.get_dim())\n",
+    "    )"
    ]
   },
   {
@@ -149,14 +145,19 @@
     "\n",
     "graph_manager.build_pareto(res.F)\n",
     "\n",
-    "display_str = input('Enter setup to display [Q to quit]: ')\n",
+    "display_str = input(\"Enter setup to display [Q to quit]: \")\n",
     "while display_str.isnumeric():\n",
-    "    proposed_layout, true_disps, model_disps, sensor_vals = experiment.get_SOO_plotting_arrays(res.X[int(display_str)])\n",
-    "    print('\\nLoss:', experiment.calc_moo_loss(res.X[int(display_str)]))\n",
+    "    (\n",
+    "        proposed_layout,\n",
+    "        true_disps,\n",
+    "        model_disps,\n",
+    "        sensor_vals,\n",
+    "    ) = experiment.get_SOO_plotting_arrays(res.X[int(display_str)])\n",
+    "    print(\"\\nLoss:\", experiment.calc_moo_loss(res.X[int(display_str)]))\n",
     "    mag_true_disps = np.linalg.norm(true_disps, axis=1).reshape(-1, 1)\n",
     "    mag_model_disps = np.linalg.norm(model_disps, axis=1).reshape(-1, 1)\n",
     "    mag_sensor_vals = np.linalg.norm(sensor_vals, axis=1).reshape(-1, 1)\n",
-    "    \n",
+    "\n",
     "    graph_manager.build_1D_compare(\n",
     "        grid,\n",
     "        proposed_layout,\n",
@@ -165,7 +166,7 @@
     "        mag_model_disps,\n",
     "    )\n",
     "    graph_manager.draw()\n",
-    "    display_str = input('Enter setup to display [Q to quit]: ')"
+    "    display_str = input(\"Enter setup to display [Q to quit]: \")"
    ]
   }
  ],
