--- a/tutorials/4.0_results_analysis.ipynb
+++ b/tutorials/4.0_results_analysis.ipynb
@@ -39,36 +39,25 @@
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
     "graph_manager = PlotManager()\n",
-    "true_temp_field = pickle_manager.read_file('results/temp_line_field.pickle')\n",
-    "grid = pickle_manager.read_file('results/temp_line_points.pickle')\n",
-    "res = pickle_manager.read_file('results/temp_1D_res_RBF5.pickle')\n",
+    "true_temp_field = pickle_manager.read_file(\"results/temp_line_field.pickle\")\n",
+    "grid = pickle_manager.read_file(\"results/temp_line_points.pickle\")\n",
+    "res = pickle_manager.read_file(\"results/temp_1D_res_RBF5.pickle\")\n",
     "field_bounds = true_temp_field.get_bounds()\n",
-    "sensor_bounds = field_bounds+np.array([[1], [-1]])*0.002\n",
+    "sensor_bounds = field_bounds + np.array([[1], [-1]]) * 0.002\n",
     "\n",
     "# Setup the experiment\n",
-    "optimiser = NSGA2Optimiser('00:00:10')\n",
-    "experiment = Experiment(\n",
-    "    true_temp_field,\n",
-    "    grid,\n",
-    "    optimiser\n",
-    ")\n",
+    "optimiser = NSGA2Optimiser(\"00:00:10\")\n",
+    "experiment = Experiment(true_temp_field, grid, optimiser)\n",
     "\n",
     "# Setup the sensor suite\n",
-    "temps = pickle_manager.read_file('../sensors/k-type-T.pickle')\n",
-    "voltages = pickle_manager.read_file('../sensors/k-type-V.pickle')\n",
+    "temps = pickle_manager.read_file(\"../sensors/k-type-T.pickle\")\n",
+    "voltages = pickle_manager.read_file(\"../sensors/k-type-V.pickle\")\n",
     "sensor = Thermocouple(temps, voltages, 1)\n",
-    "sensors = np.array([sensor]*5)\n",
+    "sensors = np.array([sensor] * 5)\n",
     "\n",
-    "sensor_suite = SensorSuite(\n",
-    "    ScalarField(RBFModel, field_bounds), \n",
-    "    sensors\n",
-    ")\n",
+    "sensor_suite = SensorSuite(ScalarField(RBFModel, field_bounds), sensors)\n",
     "experiment.plan_moo(\n",
-    "    sensor_suite,\n",
-    "    sensor_bounds,\n",
-    "    repetitions=10,\n",
-    "    loss_limit=1000,\n",
-    "    num_cores=4\n",
+    "    sensor_suite, sensor_bounds, repetitions=10, loss_limit=1000, num_cores=4\n",
     ")"
    ]
   },
@@ -102,19 +91,20 @@
     "\n",
     "graph_manager.build_pareto(res.F)\n",
     "\n",
-    "display_str = input('Enter setup to display [Q to quit]: ')\n",
+    "display_str = input(\"Enter setup to display [Q to quit]: \")\n",
     "while display_str.isnumeric():\n",
-    "    proposed_layout, true_temps, model_temps, sensor_values = experiment.get_SOO_plotting_arrays(res.X[int(display_str)])\n",
-    "    print('\\nLoss:', experiment.calc_moo_loss(res.X[int(display_str)]))\n",
-    "    graph_manager.build_1D_compare(\n",
-    "        grid,\n",
+    "    (\n",
     "        proposed_layout,\n",
-    "        sensor_values,\n",
     "        true_temps,\n",
-    "        model_temps\n",
+    "        model_temps,\n",
+    "        sensor_values,\n",
+    "    ) = experiment.get_SOO_plotting_arrays(res.X[int(display_str)])\n",
+    "    print(\"\\nLoss:\", experiment.calc_moo_loss(res.X[int(display_str)]))\n",
+    "    graph_manager.build_1D_compare(\n",
+    "        grid, proposed_layout, sensor_values, true_temps, model_temps\n",
     "    )\n",
     "    graph_manager.draw()\n",
-    "    display_str = input('Enter setup to display [Q to quit]: ')"
+    "    display_str = input(\"Enter setup to display [Q to quit]: \")"
    ]
   }
  ],
