--- a/tutorials/1.1_read_2D_scalar.ipynb
+++ b/tutorials/1.1_read_2D_scalar.ipynb
@@ -44,7 +44,7 @@
     "from cyclops.fields import ScalarField\n",
     "\n",
     "# Define the necessary objects\n",
-    "reader = MeshReader('data/monoblock_out.e')\n",
+    "reader = MeshReader(\"data/monoblock_out.e\")\n",
     "pickle_manager = PickleManager()\n",
     "unfolder = Unfolder()"
    ]
@@ -67,19 +67,19 @@
    "outputs": [],
    "source": [
     "# Read the simulation data\n",
-    "sensor_region = 'right'\n",
+    "sensor_region = \"right\"\n",
     "pos_3D = reader.read_pos(sensor_region)\n",
     "pos_2D = unfolder.compress_2D(pos_3D)\n",
     "bounds = unfolder.find_bounds(pos_2D)\n",
     "grid = unfolder.generate_grid(bounds, 30, 30)\n",
     "\n",
-    "temps = reader.read_scalar(sensor_region, 'temperature').reshape(-1, 1)\n",
+    "temps = reader.read_scalar(sensor_region, \"temperature\").reshape(-1, 1)\n",
     "temp_field = ScalarField(LModel, bounds)\n",
     "temp_field.fit_model(pos_2D, temps)\n",
     "\n",
     "# Save the simulation data\n",
-    "pickle_manager.save_file('results/temp_plane_field.pickle', temp_field)\n",
-    "pickle_manager.save_file('results/temp_plane_points.pickle', grid)"
+    "pickle_manager.save_file(\"results/temp_plane_field.pickle\", temp_field)\n",
+    "pickle_manager.save_file(\"results/temp_plane_points.pickle\", grid)"
    ]
   },
   {
@@ -109,8 +109,8 @@
     "new_line_field.fit_model(line_1D, line_temps)\n",
     "\n",
     "# Save the new 1D line field\n",
-    "pickle_manager.save_file('results/temp_line_field.pickle', new_line_field)\n",
-    "pickle_manager.save_file('results/temp_line_points.pickle', line_1D)"
+    "pickle_manager.save_file(\"results/temp_line_field.pickle\", new_line_field)\n",
+    "pickle_manager.save_file(\"results/temp_line_points.pickle\", line_1D)"
    ]
   }
  ],
