--- a/tutorials/1.2_read_2D_vector.ipynb
+++ b/tutorials/1.2_read_2D_vector.ipynb
@@ -44,7 +44,7 @@
     "from cyclops.fields import VectorField\n",
     "\n",
     "# Define the necessary objects\n",
-    "reader = MeshReader('data/monoblock_out.e')\n",
+    "reader = MeshReader(\"data/monoblock_out.e\")\n",
     "pickle_manager = PickleManager()\n",
     "unfolder = Unfolder()"
    ]
@@ -69,24 +69,26 @@
    "outputs": [],
    "source": [
     "# Read the simulation data\n",
-    "sensor_region = 'right'\n",
+    "sensor_region = \"right\"\n",
     "pos_3D = reader.read_pos(sensor_region)\n",
     "pos_2D = unfolder.compress_2D(pos_3D)\n",
     "bounds = unfolder.find_bounds(pos_2D)\n",
     "grid = unfolder.generate_grid(bounds, 30, 30)\n",
     "\n",
-    "disp = np.array([\n",
-    "    reader.read_scalar(sensor_region, 'disp_x'),\n",
-    "    reader.read_scalar(sensor_region, 'disp_y'),\n",
-    "    reader.read_scalar(sensor_region, 'disp_z')\n",
-    "]).T\n",
+    "disp = np.array(\n",
+    "    [\n",
+    "        reader.read_scalar(sensor_region, \"disp_x\"),\n",
+    "        reader.read_scalar(sensor_region, \"disp_y\"),\n",
+    "        reader.read_scalar(sensor_region, \"disp_z\"),\n",
+    "    ]\n",
+    ").T\n",
     "\n",
     "disp_field = VectorField(LModel, bounds)\n",
     "disp_field.fit_model(pos_2D, disp)\n",
     "\n",
     "# Save the simulation data\n",
-    "pickle_manager.save_file('results/disp_plane_field.pickle', disp_field)\n",
-    "pickle_manager.save_file('results/disp_plane_points.pickle', grid)"
+    "pickle_manager.save_file(\"results/disp_plane_field.pickle\", disp_field)\n",
+    "pickle_manager.save_file(\"results/disp_plane_points.pickle\", grid)"
    ]
   },
   {
@@ -114,8 +116,8 @@
     "new_line_field.fit_model(line_1D, line_disps)\n",
     "\n",
     "# Save the new 1D line field\n",
-    "pickle_manager.save_file('results/disp_line_field.pickle', new_line_field)\n",
-    "pickle_manager.save_file('results/disp_line_points.pickle', line_1D)"
+    "pickle_manager.save_file(\"results/disp_line_field.pickle\", new_line_field)\n",
+    "pickle_manager.save_file(\"results/disp_line_points.pickle\", line_1D)"
    ]
   }
  ],
