--- a/tutorials/2.1_SOO_2D_scalars.ipynb
+++ b/tutorials/2.1_SOO_2D_scalars.ipynb
@@ -29,11 +29,11 @@
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
     "graph_manager = PlotManager()\n",
-    "true_temp_field = pickle_manager.read_file('results/temp_plane_field.pickle')\n",
-    "grid = pickle_manager.read_file('results/temp_plane_points.pickle')\n",
+    "true_temp_field = pickle_manager.read_file(\"results/temp_plane_field.pickle\")\n",
+    "grid = pickle_manager.read_file(\"results/temp_plane_points.pickle\")\n",
     "\n",
     "field_bounds = true_temp_field.get_bounds()\n",
-    "sensor_bounds = field_bounds+np.array([[1, 1], [-1, -1]])*0.002"
+    "sensor_bounds = field_bounds + np.array([[1, 1], [-1, -1]]) * 0.002"
    ]
   },
   {
@@ -61,19 +61,23 @@
     "symmetry_manager = SymmetryManager()\n",
     "symmetry_manager.set_2D_x(np.mean(field_bounds[:, 0]))\n",
     "\n",
+    "\n",
     "# Setup the sensor suite\n",
-    "def f(x): return np.zeros(x.shape)\n",
+    "def f(x):\n",
+    "    return np.zeros(x.shape)\n",
+    "\n",
+    "\n",
     "sensor = RoundSensor(0, f, 0, np.array([[-5000], [5000]]), 0, 2)\n",
-    "sensors = np.array([sensor]*5)\n",
+    "sensors = np.array([sensor] * 5)\n",
     "\n",
     "# def f(x): return np.zeros(x.shape)\n",
     "# sensor = MultiSensor(0, f, 0.1, np.array([[-5000], [5000]]), np.linspace(sensor_bounds[0, 0], sensor_bounds[1, 0], 10).reshape(-1, 2))\n",
     "# sensors = np.array([sensor])\n",
     "\n",
     "sensor_suite = SensorSuite(\n",
-    "    ScalarField(RBFModel, field_bounds), \n",
+    "    ScalarField(RBFModel, field_bounds),\n",
     "    sensors,\n",
-    "    symmetry=[symmetry_manager.reflect_2D_horiz]\n",
+    "    symmetry=[symmetry_manager.reflect_2D_horiz],\n",
     ")"
    ]
   },
@@ -110,18 +114,16 @@
     "from cyclops.optimisers import PSOOptimiser\n",
     "\n",
     "\n",
-    "optimiser = PSOOptimiser('00:00:10')\n",
-    "experiment = Experiment(\n",
-    "    true_temp_field,\n",
-    "    grid,\n",
-    "    optimiser\n",
-    ")\n",
-    "experiment.plan_soo(\n",
-    "    sensor_suite,\n",
-    "    sensor_bounds\n",
-    ")\n",
+    "optimiser = PSOOptimiser(\"00:00:10\")\n",
+    "experiment = Experiment(true_temp_field, grid, optimiser)\n",
+    "experiment.plan_soo(sensor_suite, sensor_bounds)\n",
     "res = experiment.design()\n",
-    "proposed_layout, true_temps, model_temps, sensor_values = experiment.get_SOO_plotting_arrays(res.X)"
+    "(\n",
+    "    proposed_layout,\n",
+    "    true_temps,\n",
+    "    model_temps,\n",
+    "    sensor_values,\n",
+    ") = experiment.get_SOO_plotting_arrays(res.X)"
    ]
   },
   {
@@ -162,22 +164,11 @@
    ],
    "source": [
     "# Display the results\n",
-    "graph_manager.build_optimisation(\n",
-    "    res.history\n",
-    ")\n",
+    "graph_manager.build_optimisation(res.history)\n",
     "graph_manager.draw()\n",
-    "graph_manager.build_2D_compare(\n",
-    "    grid,\n",
-    "    proposed_layout,\n",
-    "    true_temps,\n",
-    "    model_temps\n",
-    ")\n",
+    "graph_manager.build_2D_compare(grid, proposed_layout, true_temps, model_temps)\n",
     "graph_manager.draw()\n",
-    "graph_manager.build_3D_compare(\n",
-    "    grid,\n",
-    "    true_temps,\n",
-    "    model_temps\n",
-    ")\n",
+    "graph_manager.build_3D_compare(grid, true_temps, model_temps)\n",
     "graph_manager.draw()"
    ]
   }
