--- a/tutorials/3.1_MOO_2D_scalars.ipynb
+++ b/tutorials/3.1_MOO_2D_scalars.ipynb
@@ -28,11 +28,11 @@
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
     "graph_manager = PlotManager()\n",
-    "true_temp_field = pickle_manager.read_file('results/temp_plane_field.pickle')\n",
-    "grid = pickle_manager.read_file('results/temp_plane_points.pickle')\n",
+    "true_temp_field = pickle_manager.read_file(\"results/temp_plane_field.pickle\")\n",
+    "grid = pickle_manager.read_file(\"results/temp_plane_points.pickle\")\n",
     "\n",
     "field_bounds = true_temp_field.get_bounds()\n",
-    "sensor_bounds = field_bounds+np.array([[1, 1], [-1, -1]])*0.002"
+    "sensor_bounds = field_bounds + np.array([[1, 1], [-1, -1]]) * 0.002"
    ]
   },
   {
@@ -50,16 +50,26 @@
     "symmetry_manager = SymmetryManager()\n",
     "symmetry_manager.set_2D_x(np.mean(field_bounds[:, 0]))\n",
     "\n",
+    "\n",
     "# Setup the sensor suite\n",
-    "def f(x): return np.zeros(x.shape)\n",
+    "def f(x):\n",
+    "    return np.zeros(x.shape)\n",
+    "\n",
+    "\n",
     "sensor_1 = RoundSensor(0, f, 0.1, np.array([[-5000], [5000]]), 0, 2)\n",
-    "sensor_2 = MultiSensor(0, f, 0.2, np.array([[-5000], [5000]]), np.linspace(sensor_bounds[0, 0], sensor_bounds[1, 0], 10).reshape(-1, 2))\n",
+    "sensor_2 = MultiSensor(\n",
+    "    0,\n",
+    "    f,\n",
+    "    0.2,\n",
+    "    np.array([[-5000], [5000]]),\n",
+    "    np.linspace(sensor_bounds[0, 0], sensor_bounds[1, 0], 10).reshape(-1, 2),\n",
+    ")\n",
     "sensors = np.array([sensor_1, sensor_1, sensor_1, sensor_1, sensor_1])\n",
     "\n",
     "sensor_suite = SensorSuite(\n",
-    "    ScalarField(RBFModel, field_bounds), \n",
+    "    ScalarField(RBFModel, field_bounds),\n",
     "    sensors,\n",
-    "    symmetry=[symmetry_manager.reflect_2D_horiz]\n",
+    "    symmetry=[symmetry_manager.reflect_2D_horiz],\n",
     ")"
    ]
   },
@@ -92,28 +102,18 @@
     "from cyclops.optimisers import NSGA2Optimiser\n",
     "\n",
     "\n",
-    "optimiser = NSGA2Optimiser('00:00:10')\n",
-    "experiment = Experiment(\n",
-    "    true_temp_field,\n",
-    "    grid,\n",
-    "    optimiser\n",
-    ")\n",
+    "optimiser = NSGA2Optimiser(\"00:00:10\")\n",
+    "experiment = Experiment(true_temp_field, grid, optimiser)\n",
     "experiment.plan_moo(\n",
-    "    sensor_suite,\n",
-    "    sensor_bounds,\n",
-    "    repetitions=100,\n",
-    "    loss_limit=1000,\n",
-    "    num_cores=4\n",
+    "    sensor_suite, sensor_bounds, repetitions=100, loss_limit=1000, num_cores=4\n",
     ")\n",
     "res = experiment.design()\n",
-    "\n",
     "\n",
     "\n",
     "# Display and save the results\n",
     "for i, setup in enumerate(res.X):\n",
     "    pickle_manager.save_file(\n",
-    "        f\"results/temp_2D_{str(i)}.pickle\",\n",
-    "        setup.reshape(-1, true_temp_field.get_dim())\n",
+    "        f\"results/temp_2D_{str(i)}.pickle\", setup.reshape(-1, true_temp_field.get_dim())\n",
     "    )"
    ]
   },
@@ -156,18 +156,18 @@
     "\n",
     "graph_manager.build_pareto(res.F)\n",
     "\n",
-    "display_str = input('Enter setup to display [Q to quit]: ')\n",
+    "display_str = input(\"Enter setup to display [Q to quit]: \")\n",
     "while display_str.isnumeric():\n",
-    "    proposed_layout, true_temps, model_temps, sensor_values = experiment.get_SOO_plotting_arrays(res.X[int(display_str)])\n",
-    "    print('\\nLoss:', experiment.calc_moo_loss(res.X[int(display_str)]))\n",
-    "    graph_manager.build_2D_compare(\n",
-    "        grid,\n",
+    "    (\n",
     "        proposed_layout,\n",
     "        true_temps,\n",
-    "        model_temps\n",
-    "    )\n",
+    "        model_temps,\n",
+    "        sensor_values,\n",
+    "    ) = experiment.get_SOO_plotting_arrays(res.X[int(display_str)])\n",
+    "    print(\"\\nLoss:\", experiment.calc_moo_loss(res.X[int(display_str)]))\n",
+    "    graph_manager.build_2D_compare(grid, proposed_layout, true_temps, model_temps)\n",
     "    graph_manager.draw()\n",
-    "    display_str = input('Enter setup to display [Q to quit]: ')"
+    "    display_str = input(\"Enter setup to display [Q to quit]: \")"
    ]
   }
  ],
