--- a/tutorials/3.3_MOO_2D_vectors.ipynb
+++ b/tutorials/3.3_MOO_2D_vectors.ipynb
@@ -157,7 +157,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.4 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -171,9 +171,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.2"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
