"Working on new boundary definition for 3D shapes - utilitises skspatial, scipy, alphashape and Delaunay"

--- a/tutorials/3.3_MOO_2D_vectors.ipynb
+++ b/tutorials/3.3_MOO_2D_vectors.ipynb
@@ -9,9 +9,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(0,'/home/cbyers/projects/working_branches/cyclops/src')\n",
+    "sys.path.insert(0,'/home/cbyers/projects/working_branches/cyclops/tutorials')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'tutorials/results/disp_plane_field.pickle'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m pickle_manager \u001b[38;5;241m=\u001b[39m PickleManager()\n\u001b[1;32m      8\u001b[0m graph_manager \u001b[38;5;241m=\u001b[39m PlotManager()\n\u001b[0;32m----> 9\u001b[0m true_temp_field \u001b[38;5;241m=\u001b[39m \u001b[43mpickle_manager\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_file\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtutorials/results/disp_plane_field.pickle\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m grid \u001b[38;5;241m=\u001b[39m pickle_manager\u001b[38;5;241m.\u001b[39mread_file(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtutorials/results/disp_plane_points.pickle\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     12\u001b[0m field_bounds \u001b[38;5;241m=\u001b[39m true_temp_field\u001b[38;5;241m.\u001b[39mget_bounds()\n",
+      "File \u001b[0;32m~/projects/working_branches/cyclops/src/cyclops/object_reader.py:39\u001b[0m, in \u001b[0;36mPickleManager.read_file\u001b[0;34m(self, file_path)\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Read an object instance from a .pickle file and return it.\u001b[39;00m\n\u001b[1;32m     31\u001b[0m \n\u001b[1;32m     32\u001b[0m \u001b[38;5;124;03mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;124;03m    object_to_return (object): the object instance loaded from file.\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     38\u001b[0m file_path \u001b[38;5;241m=\u001b[39m pathlib\u001b[38;5;241m.\u001b[39mPath(file_path)\n\u001b[0;32m---> 39\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m     40\u001b[0m     object_to_return \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(file)\n\u001b[1;32m     41\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m object_to_return\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'tutorials/results/disp_plane_field.pickle'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -21,8 +45,8 @@
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
     "graph_manager = PlotManager()\n",
-    "true_temp_field = pickle_manager.read_file(\"results/disp_plane_field.pickle\")\n",
-    "grid = pickle_manager.read_file(\"results/disp_plane_points.pickle\")\n",
+    "true_temp_field = pickle_manager.read_file(\"tutorials/results/disp_plane_field.pickle\")\n",
+    "grid = pickle_manager.read_file(\"tutorials/results/disp_plane_points.pickle\")\n",
     "\n",
     "field_bounds = true_temp_field.get_bounds()\n",
     "sensor_bounds = field_bounds + np.array([[1, 1], [-1, -1]]) * 0.002"
